[metadata]
name = PDGrapher
version = 0.1.0
author = dmohorcic, ggonzales, davidzqhuang
author_email = d.mohorcic@gmail.com, ggonzalezp16@gmail.com, dhuang26@gmail.com
description = ...
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/mims-harvard/PDGrapher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src